--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.badge {
+    padding: 10px;
+    margin: 5px;
+    border-radius: 30px;
+    width: 20px;
+    height: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn {
+    border: none;
+    padding: 10px 20px;
+}
+
+.bg-primary {
+    background-color: blue;
+    color: white;
+}
+
+.bg-warning {
+    background-color: yellow;
+    color: black;
+}
+
+.bg-error {
+    background-color: red;
+    color: white;
+}
+
+.bg-success {
+    background-color: green;
+    color: white;
 }
