--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 .badge {
     padding: 10px;
-    margin: 5px;
     border-radius: 30px;
     width: 20px;
     height: 20px;
@@ -29,4 +28,8 @@
 .bg-success {
     background-color: green;
     color: white;
+}
+
+.m-2 {
+    margin: 5px;
 }
