--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,29 @@
 .badge {
     padding: 10px;
-    border-radius: 30px;
+    border-radius: 12px;
     width: 20px;
     height: 20px;
+    font-size: 16px;
 }
 
 .btn {
     border: none;
     padding: 10px 20px;
+
+
+}
+
+.btn:hover {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    transition-duration: 0.4s;
 }
 
 .bg-primary {
-    background-color: blue;
+    background-color: #4CAF50;
     color: white;
+
+
+
 }
 
 .bg-warning {
