--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 }
 
 .bg-green {
-    background-color: #4CAF50;
+    background-color: #0b7969;
     color: white;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .bg-success {
-    background-color: green;
+    background-color: #4CAF50;
     color: white;
 }
 
